# claude_codex

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  workflow.md
prompts/: claude-conductor.md  codex-worker.md
scripts/: bootstrap-run.sh  claude-codex  install-local.sh
src/claude_codex/: __init__.py  __main__.py  claude_commands.py  cli.py  preflight.py  runner.py
src/claude_codex/prompts/: hard_rules.md
templates/: handoff.md  question.md  task.md  validation.md
tests/: test_cli.py
