[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codex"
version = "0.1.0"
description = "Claude conductor and Codex worker orchestration helpers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Dindb-dong" }]

[project.scripts]
claude-codex = "claude_codex.cli:main"
ccx = "claude_codex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
